# pinkmess

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml
.github/workflows/: lint.yml
internal/config/: config.go
internal/note/: note.go
src/pinkmess/: __init__.py  cli.py  collection.py  config.py  note.py
src/pinkmess/agents/: common.py  note_summarization.py  note_tag_suggestion.py
src/pinkmess/cli/: collection.py  config.py  main.py  note.py
